--- a/app/index.html
+++ b/app/index.html
@@ -32,24 +32,109 @@
 							<span>Бесплатный звонок</span>
 						</div>
 					</div>
-					<div class="header__contacts">
-						<div class="header__left">
-							<img src="/template/img/eliplse1.png" alt="">
+					<div class="header__center">
+						<div class="header__contacts">
+							<div class="header__left">
+								<img src="/template/img/eliplse1.png" alt="">
+							</div>
+							<div class="header__right">
+								<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
+							</div>
 						</div>
-						<div class="header__right">
-							<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
-						</div>
-					</div>
-					<div class="header__contacts">
-						<div class="header__left">
-							<img src="/template/img/eliplse1.png" alt="">
-						</div>
-						<div class="header__right">
-							<span class="green-text">Рабочий посёлок Средняя Ахтуба, <br> ул. Профсоюзная, д. 35</span>
+						<div class="header__contacts">
+							<div class="header__left">
+								<img src="/template/img/eliplse1.png" alt="">
+							</div>
+							<div class="header__right">
+								<span class="green-text">Рабочий посёлок Средняя Ахтуба, <br> ул. Профсоюзная, д. 35</span>
+							</div>
 						</div>
 					</div>
 					<div class="header__map">
 						<button type="button" class="header__button classic-button">На карте</button>
+					</div>
+					<button type="button" class="header__mobile">
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
+				</div>
+			</div>
+		</div>
+		<div class="header__bottom">
+			<div class="container">
+				<div class="header__wrap header__wrap_column">
+					<nav class="header__navigation navigation">
+						<ul class="navigation__list">
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">Главная</a>
+								<span class="navigation__additional"></span>
+							</li>
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">Продукция</a>
+								<span class="navigation__additional"></span>
+							</li>
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">Услуги</a>
+								<span class="navigation__additional"></span>
+							</li>
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">Фотогалерея</a>
+								<span class="navigation__additional">
+									Реальные строительные объекты
+								</span>
+							</li>
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">Контакты</a>
+								<span class="navigation__additional"></span>
+							</li>
+							<li class="navigation__item">
+								<a href="#" class="navigation__link">Youtube-канал</a>
+								<span class="navigation__additional">
+									Делимся опытом по выбору материалов
+								</span>
+							</li>
+						</ul>
+					</nav>
+					<div class="header__features">
+						<div class="header__image">
+							<img src="/template/img/secondlogo.png" alt="">
+						</div>
+						<div class="header__feature">
+							Предоставляем широкий спектр строительных материалов для наружной отделки в Волжском и Волгограде.
+						</div>
+						<div class="header__feature">
+							Сервис, доставка, монтаж, качественная консультация.
+						</div>
+					</div>
+					<div class="header__hidden">
+						<div class="header__contacts">
+							<div class="header__right">
+								<a href="tel:78005500053" class="header__item green-text">+7 800 550 00 53</a>
+								<span>Бесплатный звонок</span>
+							</div>
+						</div>
+						<div class="header__center">
+							<div class="header__contacts">
+								<div class="header__left">
+									<img src="/template/img/eliplse1.png" alt="">
+								</div>
+								<div class="header__right">
+									<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
+								</div>
+							</div>
+							<div class="header__contacts">
+								<div class="header__left">
+									<img src="/template/img/eliplse1.png" alt="">
+								</div>
+								<div class="header__right">
+									<span class="green-text">Рабочий посёлок Средняя Ахтуба, <br> ул. Профсоюзная, д. 35</span>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
