Первые три блока

--- a/app/index.html
+++ b/app/index.html
@@ -149,6 +149,77 @@
 		}
 	</script>
 	<main class="main">
+		<div class="index-slider">
+			<div class="container container_big">
+				<div class="swiper-pagination"></div>
+				<div class="slider-controls">
+					<div class="slider-control slider-left slider-left_index">
+						<img src="/template/img/arrow.png" alt="">
+					</div>
+					<div class="slider-control slider-right slider-right_index">
+						<img src="/template/img/arrow.png" alt="">
+					</div>
+				</div>
+
+
+
+				<div class="index-slider__container swiper-container">
+					<div class="index-slider__wrapper swiper-wrapper">
+						<div class="index-slider__item swiper-slide">
+							<img src="/template/img/banner1.jpg" alt="">
+						</div>
+						<div class="index-slider__item swiper-slide">
+							<img src="/template/img/banner1.jpg" alt="">
+						</div>
+						<div class="index-slider__item swiper-slide">
+							<img src="/template/img/banner1.jpg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="catalog-slider">
+			<div class="container_big container">
+				<div class="catalog-slider__wrap">
+					<div class="catalog-slider__title custom-title custom-title_no-border custom-title_with-lane">
+						<span>Просто.</span>
+						<span>Со вкусом.</span>
+						<span>Для вас.</span>
+					</div>
+					<div class="catalog-slider__wrapper swiper-container" dir="rtl">
+
+						<div class="catalog-slider__subwrap swiper-wrapper">
+							<a href="#" class="catalog-slider__item swiper-slide">
+								<div class="catalog-slider__head">
+									<img src="/template/img/house-slider.png" alt="">
+								</div>
+								<div class="catalog-slider__block">
+									<div class="catalog-slider__picture">
+										<img src="/template/img/slider1.png" alt="">
+									</div>
+									<div class="catalog-slider__name">
+										Фасадные материалы
+									</div>
+								</div>
+							</a>
+							<a href="#" class="catalog-slider__item swiper-slide">
+								<div class="catalog-slider__head">
+									<img src="/template/img/house-slider.png" alt="">
+								</div>
+								<div class="catalog-slider__block">
+									<div class="catalog-slider__picture">
+										<img src="/template/img/slider1.png" alt="">
+									</div>
+									<div class="catalog-slider__name">
+										Фасадные материалы
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 	<footer class="footer">
 	</footer>
