--- a/app/index.html
+++ b/app/index.html
@@ -186,7 +186,16 @@
 						<span>Со вкусом.</span>
 						<span>Для вас.</span>
 					</div>
-					<div class="catalog-slider__wrapper swiper-container" dir="rtl">
+					<div class="swiper-pagination"></div>
+					<div class="slider-controls">
+						<div class="slider-control slider-left slider-left_catalog">
+							<img src="/template/img/arrow.png" alt="">
+						</div>
+						<div class="slider-control slider-right slider-right_catalog">
+							<img src="/template/img/arrow.png" alt="">
+						</div>
+					</div>
+					<div class="catalog-slider__wrapper swiper-container" >
 
 						<div class="catalog-slider__subwrap swiper-wrapper">
 							<a href="#" class="catalog-slider__item swiper-slide">
