--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,7 @@
 		<div class="catalog-slider">
 			<div class="container_big container">
 				<div class="catalog-slider__wrap">
-					<div class="catalog-slider__title custom-title custom-title_no-border custom-title_with-lane">
+					<div class="catalog-slider__title custom-title custom-title_no-border custom-title_with-lane custom-title_full-house">
 						<span>Просто.</span>
 						<span>Со вкусом.</span>
 						<span>Для вас.</span>
@@ -225,6 +225,119 @@
 								</div>
 							</a>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="catalog">
+			<div class="container container_full">
+				<div class="catalog__wrap">
+					<div class="catalog__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
+						<span>Каталог</span>
+						<span>Продукции</span>
+					</div>
+					<div class="catalog__wrapper">
+						 <div class="catalog__row">
+							 <a href="#" class="catalog__item">
+  							 <span class="catalog__subwrap">
+									 <span class="catalog__picture">
+    							 	<img src="/template/img/icon1.png" alt="">
+    							 </span>
+    							 <span class="catalog__name">Фасадные материалы</span>
+  							 </span>
+  						 </a>
+  						 <a href="#" class="catalog__item">
+  							 <span class="catalog__subwrap">
+									 <span class="catalog__picture">
+    							 	<img src="/template/img/icon2.png" alt="">
+    							 </span>
+    							 <span class="catalog__name">Скатные кровли</span>
+  							 </span>
+  						 </a>
+  						 <a href="#" class="catalog__item">
+  							 <span class="catalog__subwrap">
+									 <span class="catalog__picture">
+    								 <img src="/template/img/icon6.png" alt="">
+    							 </span>
+    							 <span class="catalog__name">Изоляционные материалы</span>
+  							 </span>
+  						 </a>
+						 </div>
+						 <div class="catalog__row">
+							 <a href="#" class="catalog__item">
+								 <span class="catalog__subwrap">
+									 <span class="catalog__picture">
+  									<img src="/template/img/icon3.png" alt="">
+  								 </span>
+  								 <span class="catalog__name">Водосток</span>
+								 </span>
+							 </a>
+							 <a href="#" class="catalog__item">
+								 <span class="catalog__subwrap">
+									 <span class="catalog__picture">
+  									<img src="/template/img/icon4.png" alt="">
+  								 </span>
+  								 <span class="catalog__name">Мансардные окна</span>
+								 </span>
+							 </a>
+							 <a href="#" class="catalog__item">
+								 <span class="catalog__subwrap">
+									 <span class="catalog__picture">
+  									<img src="/template/img/icon5.png" alt="">
+  								 </span>
+  								 <span class="catalog__name">Ограждения</span>
+								 </span>
+							 </a>
+						 </div>
+						 <div class="catalog__row">
+							 <a href="#" class="catalog__item">
+								 <span class="catalog__subwrap">
+									 <span class="catalog__picture">
+  									<img src="/template/img/icon7.png" alt="">
+  								 </span>
+  								 <span class="catalog__name">Кровельные аксессуары</span>
+								 </span>
+							 </a>
+						 </div>
+
+
+
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="content-block">
+			<div class="container">
+				<div class="content-block__wrap">
+					<div class="content-block__images image-block">
+						<img src="/template/img/background5.png" alt="">
+					</div>
+					<div class="content-block__body">
+						<div class="content-block__column">
+							<div class="content-block__subtitle custom-subtitle">
+								Дом, милый дом!
+							</div>
+							<p>Вы так долго над ним трудились: закладывали фундамент, возводили несущие стены, монтировали окна и даже впустили кошку первой! </p>
+							<p>Вы всё сделали по правилам — и, наконец, настал тот день, когда Ваш дом готов. </p>
+							<p>Почти. </p>
+							<p>Остаётся последний штрих — красивая  и надёжная крыша над головой.  И её тоже нужно сделать правильно.</p>
+						</div>
+						<div class="content-block__column">
+							<div class="content-block__subtitle custom-subtitle">
+								Именно в этом Вам поможем мы — Fine Roof!
+							</div>
+							<p>У нас Вы найдете широкий выбор видов кровли и комплектующих: черепица битумная и металлическая, профнастил, сайдинг и фасадные панели, водосточные системы и мансардные окна, утеплитель и гидроизоляция – всё, что нужно Вашей крыше и больше! </p>
+							<p>Арифметика Fine Roof очень простая, Вам понравится: </p>
+							<p>1 минута, чтобы обговорить с нами детали по телефону; </p>
+							<p>1 час, чтобы выбрать варианты кровли и составить смету под Ваш бюджет; </p>
+							<p>1 день, в течение которого к Вам приедет мастер и определит точные размеры... </p>
+							<p>...и мы уже говорили, что это всё бесплатно? Так вот, это всё бесплатно! </p>
+							<p>Мы осуществляем доставку материалов, и это — Вы угадали! — тоже бесплатно. Сотрудничая с нами, Вам даже не придется искать рабочих: мы можем порекомендовать проверенные бригады мастеров, которые сделают крышу под ключ… </p>
+							<p>…чтобы Вы уже собственным ключом открыли двери теперь уже по-настоящему Вашего, завершенного дома!</p>
+						</div>
+					</div>
+					<div class="content-block__images content-block__images_left content-block__images_bottom image-block ">
+						<img src="/template/img/background6.png" alt="">
 					</div>
 				</div>
 			</div>
