--- a/app/index.html
+++ b/app/index.html
@@ -324,7 +324,7 @@
 						</div>
 						<div class="content-block__column">
 							<div class="content-block__subtitle custom-subtitle">
-								Именно в этом Вам поможем мы — Fine Roof!
+								Именно в этом <br> Вам поможем мы — Fine Roof!
 							</div>
 							<p>У нас Вы найдете широкий выбор видов кровли и комплектующих: черепица битумная и металлическая, профнастил, сайдинг и фасадные панели, водосточные системы и мансардные окна, утеплитель и гидроизоляция – всё, что нужно Вашей крыше и больше! </p>
 							<p>Арифметика Fine Roof очень простая, Вам понравится: </p>
@@ -338,6 +338,55 @@
 					</div>
 					<div class="content-block__images content-block__images_left content-block__images_bottom image-block ">
 						<img src="/template/img/background6.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="actions">
+			<div class="container">
+				<div class="actions__wrap">
+					<div class="actions__item">
+						<div class="actions__icon">
+							<img src="/template/img/action1.png" alt="">
+						</div>
+						<a href="#" class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
+							<span>Форма</span>
+							<span>связи</span>
+						</a>
+						<div class="actions__text">
+							Напишите <br> нам, мы поможем <br> с выбором
+						</div>
+					</div>
+					<div class="actions__item">
+						<div class="actions__icon">
+							<img src="/template/img/action2.png" alt="">
+						</div>
+						<a href="#" class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
+							<span>Youtube</span>
+							<span>канал</span>
+						</a>
+						<div class="actions__text">
+							Делимся <br> опытом
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="gallery">
+			<div class="container">
+				<div class="gallery__wrap">
+					<div class="gallery__left">
+						<div class="gallery__subtitle custom-subtitle">
+							Галерея
+						</div>
+						<div class="gallery__text">
+							<p>Мы фотографируем дома, для строительства которых использовали нашу продукцию.</p>
+							<p>Смотрите на добротную работу, вдохновляйтесь и приходите к нам на консультацию по подбору.</p>
+						</div>
+						<a href="#" class="gallery__link classic-button classic-button_white">Смотреть</a>
+					</div>
+					<div class="gallery__right">
+						<img src="/template/img/gallery.png" alt="">
 					</div>
 				</div>
 			</div>
