--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -359,11 +359,7 @@
 					</div>
 					<div class="actions__item">
 						<div class="actions__icon">
-<<<<<<< HEAD:fineroof/app/index.html
 							<object type="image/svg+xml" data="/template/img/icons.svg#video-play"></object>
-=======
-							<img src="/template/img/action2.png" alt="">
->>>>>>> 5eabe6a9f06a1d268e57ded29104073a8ba340e2:app/index.html
 						</div>
 						<a href="#" class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
 							<span>Youtube</span>
@@ -378,7 +374,9 @@
 		</div>
 		<div class="gallery">
 			<div class="container">
+				<object id='svg-test' type="image/svg+xml" data="/template/img/svg-test.svg"></object>
 				<div class="gallery__wrap">
+
 					<div class="gallery__left">
 						<div class="gallery__subtitle custom-subtitle">
 							Галерея
@@ -428,6 +426,7 @@
 	<script src="/template/libs/picturefill.js"></script>
 	<script src="/template/libs/swiper.min.js"></script>
 	<script src="/template/js/script.js"></script>
+	<script src="/template/js/vivus.min.js"></script>
 </body>
 
 </html>
