Промежуточная сборка проекта #1

--- a/fineroof/app/products.html
+++ b/fineroof/app/products.html
@@ -154,157 +154,9 @@
 		<h1 class="visually-hidden">Услуги</h1>
 		<div class="inner-title">
 			<div class="container">
-				<div class="inner-title__wrap inner-title__wrap_services">
+				<div class="inner-title__wrap inner-title__wrap_no-border inner-title__wrap_catalog-page">
 					<div class="inner-title__services custom-title custom-title_inner custom-title_no-border custom-title_with-lane custom-title_full-house">
-						<span>Услуги.</span>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="inner-services content-block content-block_inner">
-			<div class="container">
-				<div class="content-block__wrap">
-					<div class="content-block__body">
-						<div class="content-block__column">
-							<div class="content-block__subtitle custom-subtitle">
-								Информация
-							</div>
-							<div class="content-block__text">
-								<p>Широкий спектр строительных материалов
-									для наружной отделки. Мы имеем прямые
-									дилерские договора с заводами производителями.</p>
-							</div>
-							<div class="content-block__image content-block__image_services">
-								<img src="/template/img/inner-services-image.png" alt="">
-							</div>
-						</div>
-						<div class="content-block__column">
-							<div class="content-block__subtitle custom-subtitle">
-								Cервис
-							</div>
-							<div class="content-block__list feature-list">
-								<div class="feature-list__name">Замер</div>
-								<ul class="feature-list__block feature-list__block_no-list">
-									<li class="feature-list__item">
-										<p>Уважаемый клиент!</p>
-										<p>В нашей компании вы можете воспользоваться
-											услугой бесплатного замера объекта, с целью
-											безошибочного определения необходимого
-											количества материала для тех или иных
-											видов работ.</p>
-									</li>
-								</ul>
-							</div>
-							<div class="content-block__list feature-list">
-								<div class="feature-list__name">Расчет</div>
-								<ul class="feature-list__block">
-									<li class="feature-list__item">
-										<p>Этап расчёта кровельных или фасадных
-											материалов наступает в тот момент, когда
-											вашими строителями завершены работы
-											по возведению несущих конструкций. </p>
-										<p>Если вы ещё
-											не определились со строительной бригадой,
-											то мы можем осуществить расчет необходимых
-											материалов по предоставленным вами
-											чертежам. Срок расчета составляет 1 день.
-											В случае отсутствия точных чертежей –
-											предлагаем воспользоваться нашей услугой
-											бесплатного замера.</p>
-									</li>
-								</ul>
-							</div>
-							<div class="content-block__list feature-list">
-								<div class="feature-list__name">Доставка</div>
-								<ul class="feature-list__block">
-									<li class="feature-list__item">
-										<p>Доставка осуществляется автотранспортом
-											нашей компании и автотранспортом партнеров
-											на основании договора с компанией Fine Roof.
-											Ответственость за груз до момента передачи
-											на объекте Покупателя несет наша компания.
-										</p>
-										<p>Также возможна доставка строительных
-											материалов по звонку с оплатой на объекте
-											по факту получения. Вы также можете
-											воспользоваться услугами стороннего
-											перевозчика.</p>
-									</li>
-								</ul>
-							</div>
-							<div class="content-block__list feature-list">
-								<div class="feature-list__name">Оплата</div>
-									<ul class="feature-list__block feature-list__block_green">
-										<li class="feature-list__item">
-											<p>
-												<span class="feature-list__title"> Наличными в кассе</span>
-											</p>
-											<p>ЭСвою покупку вы можете оплатить в нашем
-												офисе продаж. Сумма оплаты не ограничена. </p>
-										</li>
-										<li class="feature-list__item">
-											<p>
-												<span class="feature-list__title"> Безналичная оплата</span>
-											</p>
-											<p>Юридические лица:
-												После оформления заявки
-												предоставляется любым удобным способом
-												(электронная почта, факс) счёт с необходимыми
-												для оплаты реквизитами.
-											</p>
-											<p>Физические лица:
-												После оформления заявки предоставляется
-												любым удобным способом (эектронная почта,
-												факс) счёт, который вы можете распечатать
-												и предъявить в любом отделении банка,
-												работающего с физическими лицами.
-											</p>
-										</li>
-										<li class="feature-list__item">
-											<p><span class="feature-list__title">Наличными при доставке</span></p>
-											<p>Если вы воспользуетесь нашей услугой
-												по доставке строительных материалов,
-												то возможна оплата при их получении.
-											</p>
-										</li>
-									</ul>
-							</div>
-							<div class="content-block__list feature-list">
-								<div class="feature-list__name">Монтаж</div>
-								<ul class="feature-list__block">
-									<li class="feature-list__item">
-										<p>В офисах торговой компании Fine Roof
-											вы можете получить информацию
-											от персонального менеджера о строительных
-											компаниях, выполняющих монтаж кровель
-											и фасадов.
-										</p>
-									</li>
-									<li class="feature-list__item">
-									<p>Это наши постоянные клиенты - строители,
-										за плечами которых не первый год работы.
-										Их квалификацию мы регулярно проверяем,
-										осматривая объекты на которых они работают
-										(по согласованию с заказчиком)
-												</p>
-									</li>
-								</ul>
-							</div>
-							<div class="content-block__list feature-list">
-								<div class="feature-list__name">Строителям</div>
-								<ul class="feature-list__block">
-									<li class="feature-list__item feature-list__block_no-list">
-										<p>Это наши постоянные клиенты - строители,
-											за плечами которых не первый год работы.
-											Их квалификацию мы регулярно проверяем,
-											осматривая объекты на которых они работают
-											(по согласованию с заказчиком)
-										</p>
-										<a href="tel:+78005500053">+7 800 550 00 53</a>
-									</li>
-								</ul>
-							</div>
-						</div>
+						<span>Продукция.</span>
 					</div>
 				</div>
 			</div>
